--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div class="col-lg-12 text-center">
                 <h1>Proposals for Interactive Web Visualizations</h1>
                 <p class="lead" style="text-align:center">CMPS 263: Winter 2018</p>
+                <h6> Projects have been designed in consultation and collaboration with Suresh K. Lodha </h6>
               <div class="col-md-12 text-center">
                   
                   <p> Following group projects with 3 members have been approved:</p>
