--- a/FinalProjects.html
+++ b/FinalProjects.html
@@ -69,6 +69,7 @@
             <div class="col-lg-12 text-center">
                 <h1>Final Projects</h1>
                 <p class="lead" style="text-align:center">CMPS 263: Winter 2018</p>
+                <h6> These projects have been designed and implemented in collaboration with Suresh K. Lodha </h6>
               <div class="col-md-6 text-left">
                   <ul>
                     <li><a href="CMPS263FinalProjects/EndangeredSpecies/index.html" target="_blank">Endangered Species</a></li>
