--- a/FinalProjects.html
+++ b/FinalProjects.html
@@ -72,9 +72,9 @@
                 <h6> These projects have been designed and implemented in collaboration with Suresh K. Lodha </h6>
               <div class="col-md-6 text-left">
                   <ul>
-                    <li><a href="CMPS263FinalProjects/EndangeredSpecies/index.html" target="_blank">Endangered Species</a></li>
+                    <!--<li><a href="CMPS263FinalProjects/EndangeredSpecies/index.html" target="_blank">Endangered Species</a></li>
                     <li><a href="CMPS263FinalProjects/WildLifeTrafficking/index.html" target="_blank">Illegal Wildlife Trafficking</a></li>
-                    <li><a href="CMPS263FinalProjects/PolicyContributions/index.html" target="_blank">US Lobby Contributions</a></li>
+                    <li><a href="CMPS263FinalProjects/PolicyContributions/index.html" target="_blank">US Lobby Contributions</a></li>-->
                     <li><a href="CMPS263FinalProjects/Gentrification/index.html" target="_blank">Gentrification</a></li>
                     <li><a href="CMPS263FinalProjects/DivorceKazakhstan/index.html" target="_blank">Kazakhstan: Divorce</a></li>
                     <li><a href="CMPS263FinalProjects/IridiumFlares/flares.html" target="_blank">Satellite Flares</a></li>
