--- a/CMPS263FinalProjects/EndangeredSpecies/index.html
+++ b/CMPS263FinalProjects/EndangeredSpecies/index.html
@@ -63,12 +63,12 @@
                 </div>
             </div>
             
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-sm-10 col-sm-offset-1">
                     <h4 class="credits">Designed For</h4>
                     <p style="font-size: 1.1em;">University of California, Santa Cruz <br> CMPS 263 Data Driven Discovery and Visualization <br> Winter 2018</p>
                 </div>
-            </div>            
+            </div>-->           
 
             <!-- Resources -->                    
             <div class="row" id="sources">
