--- a/CMPS263FinalProjects/WildLifeTrafficking/index.html
+++ b/CMPS263FinalProjects/WildLifeTrafficking/index.html
@@ -486,8 +486,8 @@
             <div id = "endingtext">
 
                 <p><b>Created by: </b>Karthik Balakrishna, Ishaan Paranjape, Pranav Yerabati</p>
-                <p><b>In Collaboration with </b>Professor Suresh Lodha</p>
-                <p><b>For:</b> CMPS 263, Winter 18</p>
+                <p><b>in Collaboration with </b>Suresh Lodha</p>
+                <!--<p><b>For:</b> CMPS 263, Winter 18</p>-->
 
             </div>
 
