--- a/CMPS263FinalProjects/PolicyContributions/index.html
+++ b/CMPS263FinalProjects/PolicyContributions/index.html
@@ -68,9 +68,9 @@
 
 
         <div class="row_contributor">
-            <p>Designed for: <br/>Political Hype Victims<br/>CMPS 263 Data Visualization, Winter 2018</p>
+            <!--<p>Designed for: <br/>Political Hype Victims<br/>CMPS 263 Data Visualization, Winter 2018</p>-->
             <div>
-                <p>By Osman Malik (omalik2@ucsc.edu) in collaboration with Prof. Suresh K Lodha</p>
+                <p>By Osman Malik (omalik2@ucsc.edu) in collaboration with Suresh K Lodha</p>
                 <p><a href="https://github.com/omalik2/corporatocracy">Github Repository</a></p>
 
             </div>
